k8s/11-chaostoolkit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shoppingdemo
  name: chaostoolkit
  labels:
    app: shoppingdemo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: chaostoolkit
    spec:
      containers:
      - image: docker.io/mrbwilms/chaostoolkit:latest
        name: chaostoolkit
        ports:
        - containerPort: 22
        resources: {}
        tty: true
      restartPolicy: Always
  selector:
    matchLabels:
      app: chaostoolkit
