k8s/2-api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shoppingdemo
  name: gateway-deployment
  labels:
    app: gateway
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - image: docker.io/mrbwilms/gateway:latest
          name: gateway
          ports:
            - containerPort: 8080
          resources: {}
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 120
            failureThreshold: 10
            timeoutSeconds: 10
      restartPolicy: Always
  selector:
    matchLabels:
      app: gateway
