k8s/5-fashion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shopping-demo
  name: fashion
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        shopping.demo.service: fashion
    spec:
      containers:
      - image: docker.io/mrbwilms/bestseller-fashion:latest
        name: fashion
        ports:
        - containerPort: 8082
        resources: {}
      restartPolicy: Always
  selector:
    matchLabels:
      shopping.demo.service: fashion
