k8s/7-toys-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shoppingdemo
  name: toys
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: toys
    spec:
      containers:
      - image: docker.io/mrbwilms/bestseller-toys:latest
        name: toys
        ports:
        - containerPort: 8081
        resources: {}
        livenessProbe:
          httpGet:
            port: 8081
            path: /actuator/health
          initialDelaySeconds: 120
          failureThreshold: 10
          timeoutSeconds: 10
      restartPolicy: Always
  selector:
    matchLabels:
      app: toys
