k8s/9-hot-deals-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shoppingdemo
  name: hot-deals-pod
  labels:
    app: shoppingdemo
    type: spring-boot
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: hot-deals
    spec:
      containers:
      - image: docker.io/mrbwilms/hot-deals:latest
        name: hotdeals
        ports:
        - containerPort: 8083
        resources: {}
        livenessProbe:
          httpGet:
            port: 8083
            path: /actuator/health
          initialDelaySeconds: 120
          failureThreshold: 10
          timeoutSeconds: 10
      restartPolicy: Always
  selector:
    matchLabels:
      app: hot-deals
