k8s/10-hot-deals-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shoppingdemo
  name: hot-deals-service
  labels:
    app: shoppingdemo
spec:
  ports:
  - name: "http"
    port: 8083
    targetPort: 8083
  selector:
    app: hot-deals
status:
  loadBalancer: {}
