k8s/10-hotdeals-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shopping-demo
  name: hotdeals
spec:
  ports:
  - name: "http"
    port: 8083
    targetPort: 8083
  selector:
    shopping.demo.service: hotdeals
status:
  loadBalancer: {}
