k8s/12-chaostoolkit-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shoppingdemo
  name: chaostoolkit-service
  labels:
    app: chaos-engineering
spec:
  ports:
  - name: ssh
    port: 22
    targetPort: 22
  selector:
    app: chaostoolkit
status:
  loadBalancer: {}
