k8s/3-api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shopping-demo
  name: gateway
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  selector:
    shopping.demo.service: gateway
status:
  loadBalancer: {}
