k8s/8-toys-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shoppingdemo
  name: toys
spec:
  ports:
  - name: "http"
    port: 8081
    targetPort: 8081
  selector:
    app: toys
status:
  loadBalancer: {}
