k8s/api-gateway-step-3-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shopping-demo
  name: api-gateway
  labels:
    io.kompose.service: api-gateway
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: api-gateway
status:
  loadBalancer: {}
