k8s/hot-deals-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shoppingdemo
  name: hotdeals-service
  labels:
    app: shoppingdemo
spec:
  ports:
  - name: "http"
    port: 8083
    targetPort: 8083
  selector:
    app: hotdeals
