k8s/13-chaostoolkit-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chaostoolkit
  namespace: shoppingdemo
spec:
  rules:
    - host: chaostoolkit.workshop.demo
      http:
        paths:
          - path: /
            backend:
              serviceName: chaostoolkit
              servicePort: 22
